# SuperCalculator

./: .gitignore  CMakeLists.txt  Makefile  calculations.cpp  calculator.cpp  calculator.h  func.cpp  func.h  main.cpp  tree.cpp
test/: CMakeLists.txt  test.cpp
